crates/carta/tests/snapshots/golden_writer__html__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<thead>
<tr>
<th>product</th>
<th>note</th>
</tr>
</thead>
<tbody>
<tr>
<td>multi<br />
line cell</td>
<td>plain</td>
</tr>
</tbody>
</table>
