crates/carta/tests/snapshots/golden_writer__html__table__table-empty-header.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<thead>
<tr>
<th></th>
<th></th>
</tr>
</thead>
<tbody>
<tr>
<td>a</td>
<td>b</td>
</tr>
</tbody>
</table>
