crates/carta/tests/snapshots/golden_writer__html__table__table-headerless-plain.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<tbody>
<tr>
<td>a</td>
<td>b</td>
</tr>
<tr>
<td>c</td>
<td>d</td>
</tr>
</tbody>
</table>
