crates/carta/tests/snapshots/golden_writer__html__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<blockquote>
<table>
<thead>
<tr>
<th>a</th>
<th>b</th>
</tr>
</thead>
<tbody>
<tr>
<td>1</td>
<td>2</td>
</tr>
</tbody>
</table>
</blockquote>
